Verif/Test/Invalide/test_erreur_2.12+2.13-3.deca
// Description:
//    Programme soulevant l'erreur (2.12/ 2.13)
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Un champ ne peut pas être de type 'void' (règle 2.12 / 2.13)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 19/01/2012

class A {
   protected void i;
}

{
}
